// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BusEstimateComponent /> does a snapshot 1`] = `
<BusEstimateComponent
  api={
    Object {
      "requestTimeEstimate": [Function],
    }
  }
>
  <div
    className="timeTable"
  >
    ROUTE:  
    <br />
    STOP: 
    <br />
    DIRECTION: 
    <br />
    NEXT BUS ARRIVES AT: 
    <br />
    <Button
      active={false}
      disabled={false}
      id="estimateButton"
      onClick={[Function]}
      type="button"
      variant="primary"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        id="estimateButton"
        onClick={[Function]}
        type="button"
      >
        Click to Get Estimate
      </button>
    </Button>
  </div>
</BusEstimateComponent>
`;

exports[`<BusEstimateComponent /> should update text when clicking on button 1`] = `
<BusEstimateComponent
  api={
    Object {
      "requestTimeEstimate": [Function],
    }
  }
>
  <div
    className="timeTable"
  >
    ROUTE:  
    20
    <br />
    STOP: 
    Madison & Jefferson
    <br />
    DIRECTION: 
    Westbound
    <br />
    NEXT BUS ARRIVES AT: 
    12:02
    <br />
    <Button
      active={false}
      disabled={false}
      id="estimateButton"
      onClick={[Function]}
      type="button"
      variant="primary"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        id="estimateButton"
        onClick={[Function]}
        type="button"
      >
        Click to Get Estimate
      </button>
    </Button>
  </div>
</BusEstimateComponent>
`;
